centered social icons, fixed spacing.

--- a/styles/sass/partials/_icons.scss
+++ b/styles/sass/partials/_icons.scss
@@ -1,13 +1,13 @@
 .socials {
     font-size: 2rem;
     /* color: $orange; */
-    display: inline-block;
+    /* display: inline-block; */
     /* display: flex;
     flex-wrap: wrap; */
-    /* margin: 6% auto; */
-    margin: 1%;
-    width: calc(100% / 3 - 24px);
-    justify-content: space-between;
+    margin: 6% auto;
+    /* margin: 1%; */
+    /* width: calc(100% / 3 - 24px); */
+    justify-content: space-around;
 
 }
 
