--- a/styles/styles.css
+++ b/styles/styles.css
@@ -403,15 +403,14 @@ a {
 .socials {
   font-size: 2rem;
   /* color: $orange; */
-  display: inline-block;
+  /* display: inline-block; */
   /* display: flex;
   flex-wrap: wrap; */
-  /* margin: 6% auto; */
-  margin: 1%;
-  width: calc(33.3333333333% - 24px);
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  margin: 6% auto;
+  /* margin: 1%; */
+  /* width: calc(100% / 3 - 24px); */
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
 }
 
 .fa-brands,
